<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:paddingEnd="15dp"
            android:paddingStart="25dp"
            android:paddingTop="8dp"
            android:text="@string/title_string"
            android:textColor="#000000"
            android:textSize="18sp" />

        <EditText
            android:background="@drawable/border"
            android:id="@+id/etTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp"
            android:hint="title"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="25dp"
            android:paddingTop="10dp"
            android:text="@string/description_string"
            android:textColor="#000000"
            android:textSize="18sp" />


        <EditText
            android:background="@drawable/border"
            android:id="@+id/etDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|start"
            android:hint="description"
            android:inputType="textMultiLine"
            android:lines="4"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp"
            android:scrollbars="vertical" />

        <ListView
            android:id="@+id/addContactList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            >

        </ListView>

        <LinearLayout
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/bAddContact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:background="@drawable/ic_add"

                />

            <TextView
                android:id="@+id/tAddContact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:text="@string/add_contact_button_string"
                android:textAlignment="center"
                android:textSize="23sp"
                android:textStyle="bold" />

        </LinearLayout>

        <View
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorPrimary"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="15dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/choose_date_string"
                android:textSize="16sp" />

            <EditText
                android:background="@drawable/border"
                android:id="@+id/etDate"
                android:layout_width="150dp"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <View
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorPrimary"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/choose_hour_string"
                android:textSize="16sp"
                />

            <EditText
                android:background="@drawable/border"
                android:id="@+id/etHour"
                android:layout_marginStart="10dp"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:hint="@string/hour_hint_string"
                />

            <TextView
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_minute_string"
                android:textSize="16sp"
                />

            <EditText
                android:background="@drawable/border"
                android:id="@+id/etMinute"
                android:layout_marginStart="10dp"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:hint="@string/min_hint_string"
                />

        </LinearLayout>

        <View
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorPrimary"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="5dp"
                android:paddingStart="200dp"
                android:text="@string/notification_string"
                android:textSize="16sp" />

            <Switch
                android:id="@+id/notificationSwitch"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/notificationLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/set_time_string"
                android:textSize="16sp" />

            <EditText
                android:background="@drawable/border"
                android:id="@+id/etNotificationHours"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:hint="@string/hour_hint_string"
                android:inputType="numberDecimal" />

            <EditText
                android:background="@drawable/border"
                android:id="@+id/etNotificationMinutes"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:hint="@string/min_hint_string"
                android:inputType="numberDecimal" />

        </LinearLayout>

        <Button
            android:id="@+id/bAddEvent"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="Add"
            android:textColor="#FFFFFF"
            android:background="@drawable/circular_button_green"
            />

        <View
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/colorPrimary"/>

    </LinearLayout>

</ScrollView>